# robotcourses-api

./: README.md  log.html  output.xml  pyproject.toml  report.html  usuario.robot
resources/connections/: app_conn.yaml  session.resource
resources/contracts/: __init__.py  post_login.resource
resources/data/: user_data.resource
resources/routes/: delete_concluir_carrinho.resource  post_carrinhos.resource  post_login.resource  post_usuarios.resource
resources/utils/: utils.resource
tests/Carrinhos/: carrinhos.robot
tests/Login/: login.robot
tests/Usuarios/: usuarios.robot
